--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -7,8 +7,8 @@
         </div>
         <div> &copy; WanderLust Private Limited</div>
         <div class="f-info-links">
-            <a href="/privacy">Privacy</a>
-            <a href="/terms">Terms</a>
+            <a href="/listing/privacy">Privacy</a>
+            <a href="/listing/terms">Terms</a>
         </div>
     </div>
 </footer>
