add payment page

--- a/views/Listing/list.ejs
+++ b/views/Listing/list.ejs
@@ -38,7 +38,7 @@
         </div>
     </div>
 <div class="col-11 col-md-7 col-lg-5 d-flex justify-content-center w-100">
-    <a href="/listing/<%= listing._id %>/book" class="btn btn-success bookBtn">Book Now</a>
+    <a href="/listing/<%= listing._id %>/book" class="btn btn-danger bookBtn">Book Now</a>
    
 </div>
 
