--- a/views/Listing/confirm.ejs
+++ b/views/Listing/confirm.ejs
@@ -2,6 +2,11 @@
 
 <style>
 
+    body{
+        width: 100vw;
+        display: flex;
+        justify-content: center;
+    }
   .confirmation-card {
     background: #fff;
     border-radius: 15px;
@@ -11,6 +16,7 @@
     max-width: 450px;
     width: 100%;
     animation: fadeIn 0.6s ease-out;
+    margin: auto;
   }
 
   .confirmation-card h2 {
