payment pages add

--- a/views/Listing/index.ejs
+++ b/views/Listing/index.ejs
@@ -20,7 +20,7 @@
     <% } %>
   <% } else { %>
     <div class="col-12 d-flex flex-column align-items-center mt-5">
-      <h2>No listings found in this category</h2>
+      <h2>No listings found </h2>
       <a href="/listing" class="btn w-25 text-white btn-secondary mt-3">Show All</a>
     </div>
   <% } %>
