code structure using mvc

--- a/views/Listing/book.ejs
+++ b/views/Listing/book.ejs
@@ -90,7 +90,7 @@
                         <span>Total (INR)</span>
                         <span>₹<%= total %></span>
                     </div>
-                    <form action="/listing/<%= listing._id%>/payment">
+                    <form action="/booking/<%= listing._id%>/payment">
                         <button class="btn btn-danger w-100 mt-3">Pay Now &nbsp;&nbsp;&nbsp;₹<%= total %></button>
                     </form>
                 </div>
