--- a/views/Listing/paymentPage.ejs
+++ b/views/Listing/paymentPage.ejs
@@ -90,7 +90,7 @@
         </label>
 
         <div class="text-center mt-4">
-          <a href="/confirm" id="payBtn" class="btn btn-success btn-lg w-100">Pay ₹<%= total %></a>
+          <a href="/booking/confirm" id="payBtn" class="btn btn-success btn-lg w-100">Pay ₹<%= total %></a>
         </div>
       </div>
 
