--- a/views/Listing/bookForm.ejs
+++ b/views/Listing/bookForm.ejs
@@ -5,7 +5,7 @@
     <div class="card shadow-sm p-4 rounded-4">
       <h2 class="fw-bold mb-4 text-center">Start Your Booking</h2>
 
-      <form action="/listing/<%= listing._id %>/book" method="POST">
+      <form action="/booking/<%= listing._id %>/book" method="POST">
 
         <!-- Dates -->
         <div class="row mb-3">
