--- a/views/layouts/boilerPlate.ejs
+++ b/views/layouts/boilerPlate.ejs
@@ -14,6 +14,7 @@
 <link rel="stylesheet" href="/css/list.css">
 <link rel="stylesheet" href="/css/index.css">
 <link rel="stylesheet" href="/css/form.css">
+<link rel="stylesheet" href="/css/booking.css">
 <script src="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.js"></script>
 <link href="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.css" rel="stylesheet" />
 
